--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>Select the scenario that are more interetsing and surprising.</h1>
+    <h1>Select the scenario that has more interetsing and surprising behavior of ego vehicle (green).</h1>
     <div class="gif-container">
         <img id="gif1" class="gif" src="" alt="GIF 1" onclick="selectGif(1)">
         <img id="gif2" class="gif" src="" alt="GIF 2" onclick="selectGif(2)">
