--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
         h2 {
             text-align: center; /* Center the text horizontally */
         }
+        h3 {
+            text-align: center; /* Center the text horizontally */
+        }
     </style>
 </head>
 <body>
-    <h1>Select the scenario that has more interetsing and surprising behavior of ego vehicle (green).</h1>
-    <h2>When you finish the annotation, click "Download CVS" button to save the csv file.</h2>
+    <h2>Select the scenario that has more interetsing and surprising behavior of ego vehicle (green).</h2>
+    <h3>When you finish the annotation, click "Download CVS" button to save the csv file.</h3>
     <div class="gif-container">
         <img id="gif1" class="gif" src="" alt="GIF 1" onclick="selectGif(1)">
         <img id="gif2" class="gif" src="" alt="GIF 2" onclick="selectGif(2)">
