--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             margin-top: 20px;
             padding: 10px;
             border: 1px solid #ccc;
-            height: 150px;
+            height: 300px;
             overflow-y: scroll;
             background-color: #f9f9f9;
         }
@@ -47,7 +47,7 @@
 </head>
 <body>
     <h2>Select the scenario that has more interetsing and surprising behavior of ego vehicle (green).</h2>
-    <h3>When you finish the annotation, click "Download CVS" button to save the csv file.</h3>
+    <!-- <h3>When you finish the annotation, click "Download CVS" button to save the csv file.</h3> -->
     <div class="gif-container">
         <img id="gif1" class="gif" src="" alt="GIF 1" onclick="selectGif(1)">
         <img id="gif2" class="gif" src="" alt="GIF 2" onclick="selectGif(2)">
