--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h2>Select the scenario that has more interetsing and surprising behavior of ego vehicle (green).</h2>
+    <h2>Select the scenario that is has more interetsing and interactive behaviors related to the ego vehicle (green).</h2>
     <!-- <h3>When you finish the annotation, click "Download CVS" button to save the csv file.</h3> -->
     <div class="gif-container">
         <img id="gif1" class="gif" src="" alt="GIF 1" onclick="selectGif(1)">
