--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         let sessionPreferences = []; // Holds preferences for the current session only
 
         // Load the JSON file containing GIF names
-        fetch('./filenames_train.json')
+        fetch('./HF_N20_DT0.5_TL5.0_4.0_val_future_s3/filenames.json')
             .then(response => response.json())
             .then(data => {
                 gifs = data;
