--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           const encodedUri = encodeURI(csvContent);
           const link = document.createElement("a");
           link.setAttribute("href", encodedUri);
-          link.setAttribute("download", "gif_preferences.csv");
+          link.setAttribute("download", "preferences.csv");
           document.body.appendChild(link);
           link.click();
           document.body.removeChild(link);
